--- a/package.json
+++ b/package.json
@@ -24,15 +24,16 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
-    "zone.js": "~0.8.29",
-    "@ngxs/store": "^3.2.0",
-    "@ngxs/logger-plugin": "^3.2.0",
     "@ngxs/devtools-plugin": "^3.2.0",
-    "@ngxs/storage-plugin": "^3.2.0",
     "@ngxs/form-plugin": "^3.2.0",
-    "@ngxs/router-plugin": "^3.2.0"
+    "@ngxs/logger-plugin": "^3.2.0",
+    "@ngxs/router-plugin": "^3.2.0",
+    "@ngxs/storage-plugin": "^3.2.0",
+    "@ngxs/store": "^3.2.0",
+    "core-js": "^2.5.4",
+    "normalizr": "^3.3.0",
+    "rxjs": "~6.3.3",
+    "zone.js": "~0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.12.3",
