--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ngxs/storage-plugin": "^3.2.0",
     "@ngxs/store": "^3.2.0",
     "core-js": "^2.5.4",
+    "mtgsdk-ts": "^1.1.2",
     "normalizr": "^3.3.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
