--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngxs/router-plugin": "^3.2.0",
     "@ngxs/storage-plugin": "^3.2.0",
     "@ngxs/store": "^3.2.0",
+    "angular-animations": "0.0.10",
     "core-js": "^2.5.4",
     "jimp": "^0.6.4",
     "lodash": "^4.17.11",
