--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build": "ionic cordova build android --prod --debug --buildConfig=build.json"
+    "build": "ionic cordova build android --prod --release --buildConfig=build.json"
   },
   "private": true,
   "dependencies": {
