--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@ngxs-labs/dispatch-decorator": "^2.1.0",
+    "@ngxs-labs/select-snapshot": "^1.1.0",
     "@ngxs/devtools-plugin": "^3.2.0",
     "@ngxs/form-plugin": "^3.2.0",
     "@ngxs/logger-plugin": "^3.2.0",
